--- a/lay-leadership/index.html
+++ b/lay-leadership/index.html
@@ -198,7 +198,7 @@
                             </div>
                         </div>
                     </div>
-                                                                    <div class="col-md-6">
+                </div>                                                 <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                     </div>
-                                                                                                        <div class="col-md-6">
+                </div>                                                                                   <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                     </div>
-                                                                                                                                            <div class="col-md-6">
+                </div>                                                                                                                        <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
@@ -246,7 +246,7 @@
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
                             </div>
                         </div>
-                    </div>
+                   </div>
             </div>
         </div>
                                                                         <h4>Finance Committee</h4>
@@ -553,5 +553,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
     <script src="/js/outdated-browser.js"></script>
 </body>
-
 </html>
