Added Real Mission Statement
Added Mission Statement in the frame in the back of church that was "In loving memory of Edmund Bedel by brother, John"

--- a/index.html
+++ b/index.html
@@ -89,7 +89,16 @@
             </div>
             <div class="page-content co-md-6">
                 <h3>Mission Statement</h3>
-                <p>Immaculate Conception Parish is a center of worship and faith formation based in the Roman Catholic tradition serving the needs of 220 families in rural Millhousen, Indiana and the surrounding Decatur and Jennings Counties. Activities include weekly worship, sacramental preparation, youth ministry, ministry to the homebound, outreach services, RCIA, and much more.</p>
+                <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
+                <ul>
+                    <li>living out Gospel values in our families and within the broader community</li>
+                    <li>coming together to worship in faith</li>
+                    <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
+                    <li>welcoming other to join us</li>
+                    <li>continuing the faith formation of ourselves and our children</li>
+                    <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
+                    <li>and reaching out to share God's gifts with others</li>
+                </ul>
                 <!-- Just some generic text to fill space until I have some better ideas for the home page -->
                 <h3>Lorem 2</h3>
                 <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
