Added Links to Navigation

--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -52,30 +52,31 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/staff/">Staff <span class="sr-only">(current)</span></a></li>
-                                <li><a href="/lay-leadership/">Lay Leadership</a></li>
-                                <li><a href="#">Parish History</a></li>
+                                <li><a href="/about/staff/">Staff</a></li>
+                                <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
+                                <li><a href="/about/history/">Parish History</a></li>
+                                <li><a href="#">Mass</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="#">Directions</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="/about/directions/">Directions</a></li>
+                                <li><a href="/about/contact/">Contact</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Pre-K thru 5th Grade</a></li>
-                                <li><a href="#">6th thru 12th Grade</a></li>
-                                <li><a href="#">Adult Education</a></li>
+                                <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
+                                <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
+                                <li><a href="/faith-formation/adult/">Adult Education</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="#">RCIA</a></li>
+                                <li><a href="/faith-formation/rcia/">RCIA</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Sacraments</a></li>
+                        <li><a href="/sacraments/">Sacraments</a></li>
                         <li><a href="/calendar/">Events Calendar</a></li>
                         <li><a href="/bulletins/">Bulletins</a></li>
-                        <li><a href="#">Ministry Schedule</a></li>
+                        <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
