--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,7 +36,7 @@
             <div class="quick-info">
                 <ul>
                     <li>PLC: Sister Donna Prickel</li>
-                    <li>Mass: Sunday at 8 AM</li>
+                    <li id="mass">Mass: Sunday at 8 AM</li>
                     <li><a href="tel:8125912362">(812) 591-2362</a></li>
                 </ul>
             </div>
@@ -57,7 +58,7 @@
                                 <li><a href="/about/staff/">Staff</a></li>
                                 <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
                                 <li><a href="/about/history/">Parish History</a></li>
-                                <li><a href="#">Mass</a></li>
+                                <li><a href="" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/about/directions/">Directions</a></li>
                                 <li><a href="/about/contact/">Contact</a></li>
@@ -115,7 +116,7 @@
     </footer>
     <script src="/js/format-google-calendar.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
         formatGoogleCalendar.init({
             calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/events?key=AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8&singleEvents=true&orderBy=startTime'
@@ -138,6 +139,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
     <script src="/js/outdated-browser.js"></script>
+    <script>
+        $.fn.extend({
+    animateCss: function (animationName) {
+        var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
+        this.addClass('animated ' + animationName).one(animationEnd, function() {
+            $(this).removeClass('animated ' + animationName);
+        });
+    }
+});
+    </script>
 </body>
 
 </html>
