Fixed Mass Link in Header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <li><a href="/about/staff/">Staff</a></li>
                                 <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
                                 <li><a href="/about/history/">Parish History</a></li>
-                                <li><a href="" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
+                                <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/about/directions/">Directions</a></li>
                                 <li><a href="/about/contact/">Contact</a></li>
