--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -99,6 +100,8 @@
                         <p>View and submit photos from recent parish activities</p>
                     </a>
                 </div>
+                <div class="social-media">
+                    <h3>Follow us on social media!</h3> <a href="https://www.facebook.com/Millhousen/" title="Facebook"><span class="fa fa-facebook-square fa-2x"></span></a> <a href="https://plus.google.com/101600092827744209060" title="Google"><span class="fa fa-google fa-2x"></span></a> </div>
             </div>
             <div class="page-content co-md-6">
                 <h3>Mission Statement</h3>
