Fixed "Board of Directors" layout
Moved Sister Donna's titles to be all on one line

--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -95,8 +95,7 @@
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
                             <div class="media-body">
                                 <h2 class="media-heading">Sister Donna Prickel</h2>
-                                <div class="job">President and Chairwoman</div>
-                                <div class="job">Parish Life Coordinator</div>
+                                <div class="job">President and Chairwoman - Parish Life Coordinator</div>
                                 <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
                                 <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
                             </div>
@@ -112,7 +111,6 @@
                                 <div class="job">Secretary</div>
                                 <div class="mail"><a href="mailto:scott@email.com">scott@email.com</a> </div>
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -156,7 +154,6 @@
                                 <div class="job">Secretary</div>
                                 <div class="mail"><a href="mailto:carrie@email.com">carrie@email.com</a> </div>
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -174,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                                <div class="col-md-6">
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/29c60021f5cc76da8e978deed070a79b?d=identicon&s=120&r=g"> </div>
@@ -187,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                                <div class="col-md-6">
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/7660fef6be0fe6286ee6685112cfeb46?d=identicon&s=120&r=g"> </div>
@@ -199,7 +196,8 @@
                             </div>
                         </div>
                     </div>
-                </div>                                                 <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/b144c4e85ec90a9c37326592270baa99?d=identicon&s=120&r=g"> </div>
@@ -211,7 +209,8 @@
                             </div>
                         </div>
                     </div>
-                </div>                                                                                   <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/25c3d440948e99696e3702d67c51dba3?d=identicon&s=120&r=g"> </div>
@@ -223,7 +222,8 @@
                             </div>
                         </div>
                     </div>
-                </div>                                                                                                                        <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/3e56f279ef1fec7cd41ef79465fe71c1?d=identicon&s=120&r=g"> </div>
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                                                                                                                                            <div class="col-md-6">
+                <div class="col-md-6">
                     <div class="business-card">
                         <div class="media">
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
@@ -247,10 +247,10 @@
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
                             </div>
                         </div>
-                   </div>
+                    </div>
+                </div>
             </div>
-        </div>
-                                                                        <h4>Finance Committee</h4>
+            <h4>Finance Committee</h4>
             <p>Purpose, who we are, what we do</p>
             <div class="row">
                 <div class="col-md-6">
@@ -275,7 +275,6 @@
                                 <div class="job">Secretary</div>
                                 <div class="mail"><a href="mailto:vic@email.com">vic@email.com</a> </div>
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -307,7 +306,7 @@
                     </div>
                 </div>
             </div>
-                                                                        <h4>Faith Formation Commission</h4>
+            <h4>Faith Formation Commission</h4>
             <p>Purpose, who we are, what we do</p>
             <div class="row">
                 <div class="col-md-6">
@@ -332,7 +331,6 @@
                                 <div class="job">Chairman</div>
                                 <div class="mail"><a href="mailto:mark@email.com">mark@email.com</a> </div>
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -415,7 +413,6 @@
                                 <div class="job">Keys</div>
                                 <div class="mail"><a href="mailto:dave@email.com">dave@email.com</a> </div>
                                 <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -538,20 +535,21 @@
                     </div>
                 </div>
             </div>
-    </div>
-    <footer class="footer">
-        <div class="jagged-pattern"></div>
-        <div class="container">
-            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
-            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
         </div>
-    </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
-    <script src="/js/outdated-browser.js"></script>
+        <footer class="footer">
+            <div class="jagged-pattern"></div>
+            <div class="container">
+                <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+                <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
+            </div>
+        </footer>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
+        <script src="/js/outdated-browser.js"></script>
 </body>
+
 </html>
