--- a/index.html
+++ b/index.html
@@ -102,8 +102,53 @@
                 </div>
                 <div class="social-media">
                     <h3>Follow us on social media!</h3> <a href="https://www.facebook.com/Millhousen/" title="Facebook"><span class="fa fa-facebook-square fa-2x"></span></a> <a href="https://plus.google.com/101600092827744209060" title="Google"><span class="fa fa-google fa-2x"></span></a> </div>
+                <div class="daily-readings">
+                    <h3>Daily Readings</h3>
+                    <iframe width="150" height="120" scrolling="no" frameborder="0" src="http://www.catholiccontent.com/150/mass/" style="display: block;"></iframe>
+                </div>
             </div>
             <div class="page-content co-md-6">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active"> <img src="/img/church2.jpg" alt="Church History">
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
+                                    <a href="/about/history/">
+                                        <button type="button" class="btn btn-default">Learn More About Our History</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="https://images.unsplash.com/photo-1474816734820-13ad2a6ba010?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=dckbo-9o7ga-josh-applegate.jpg&s=5f62c008603875492635fce6f149b805" alt="Church History">
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
+                                    <a href="/about/history/">
+                                        <button type="button" class="btn btn-default">Learn More About Our History</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item"> <img src="https://i.vimeocdn.com/video/582129039_1280x720.jpg" alt="Parish Mission">
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <p>Hosting inspriational speakers to brighten your life</p>
+                                    <a href="/faith-formation/adult/">
+                                        <button type="button" class="btn btn-default">View Upcoming Formation Events</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+                </div>
                 <h3>Mission Statement</h3>
                 <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
                 <ul>
