--- a/index.html
+++ b/index.html
@@ -128,14 +128,11 @@
                         <div class="item"> <img src="https://images.unsplash.com/photo-1474816734820-13ad2a6ba010?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=dckbo-9o7ga-josh-applegate.jpg&s=5f62c008603875492635fce6f149b805" alt="Church History">
                             <div class="container">
                                 <div class="carousel-caption">
-                                    <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
-                                    <a href="/about/history/">
-                                        <button type="button" class="btn btn-default">Learn More About Our History</button>
-                                    </a>
+                                    <p>Join us for Mass!</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="item"> <img src="https://i.vimeocdn.com/video/582129039_1280x720.jpg" alt="Parish Mission">
+                        <div class="item"> <img src="/img/fr-dan-speaker.jpg" alt="Parish Mission">
                             <div class="container">
                                 <div class="carousel-caption">
                                     <p>Hosting inspriational speakers to brighten your life</p>
