Add Calendar Title
Add title to Calendar page, and made it use proper spacing

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -83,8 +83,11 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-        <div id='calendar' class="container">
-            <p><a href="http://www.google.com/calendar/render?cid=http://www.google.com/calendar/feeds/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/public/basic" target="_blank">Add</a> our calendar to your Google account for easy access through the Google Calendar app!</p>
+        <div class="container">
+            <h1>Events Calendar</h1>
+            <div id='calendar'>
+                <p><a href="http://www.google.com/calendar/render?cid=http://www.google.com/calendar/feeds/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/public/basic" target="_blank">Add</a> our calendar to your Google account for easy access through the Google Calendar app!</p>
+            </div>
         </div>
     </div>
     <footer class="footer">
