Removed "Hosted by Street Smart" from footer

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -109,7 +109,6 @@
                                 <div class="job">Religious Education Administrator</div>
                                 <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
                                 <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
-
                             </div>
                         </div>
                     </div>
@@ -133,7 +132,7 @@
     <footer class="footer">
         <div class="jagged-pattern"></div>
         <div class="container">
-            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
             <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
         </div>
     </footer>
