--- a/faith-formation/adult/index.html
+++ b/faith-formation/adult/index.html
@@ -135,7 +135,7 @@
         <footer class="footer">
             <div class="jagged-pattern"></div>
             <div class="container">
-                <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+                <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
                 <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
             </div>
         </footer>
