Fixed "Current" in navigation

--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -53,8 +53,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                        <li><a href="/">Home</a></li>
+                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/about/staff/">Staff</a></li>
                                 <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
@@ -62,7 +62,7 @@
                                 <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/about/directions/">Directions</a></li>
-                                <li><a href="/about/contact/">Contact</a></li>
+                                <li class="active"><a href="/about/contact/">Contact <span class="sr-only">(current)</span></a></li>
                             </ul>
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
