--- a/about/directions/index.html
+++ b/about/directions/index.html
@@ -53,7 +53,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/about/staff/">Staff</a></li>
@@ -61,7 +61,7 @@
                                 <li><a href="/about/history/">Parish History</a></li>
                                 <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="active"><a href="/about/directions/">Directions</a></li>
+                                <li class="active"><a href="/about/directions/">Directions <span class="sr-only">(current)</span></a></li>
                                 <li><a href="/about/contact/">Contact</a></li>
                             </ul>
                         </li>
