--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -52,10 +52,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                        <li><a href="/">Home</a></li>
+                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/about/staff/">Staff</a></li>
+                                <li class="active"><a href="/about/staff/">Staff <span class="sr-only">(current)</span></a></li>
                                 <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
                                 <li><a href="/about/history/">Parish History</a></li>
                                 <li><a href="#">Mass</a></li>
