--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -51,7 +51,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/about/staff/">Staff</a></li>
@@ -74,7 +74,7 @@
                         </li>
                         <li><a href="/sacraments/">Sacraments</a></li>
                         <li><a href="/calendar/">Events Calendar</a></li>
-                        <li><a href="/bulletins/">Bulletins</a></li>
+                        <li class="active"><a href="/bulletins/">Bulletins <span class="sr-only">(current)</span></a></li>
                         <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
                     </ul>
                 </div>
