--- a/faith-formation/adult/index.html
+++ b/faith-formation/adult/index.html
@@ -53,7 +53,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/about/staff/">Staff</a></li>
@@ -65,11 +65,11 @@
                                 <li><a href="/about/contact/">Contact</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
+                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
                                 <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
-                                <li><a href="/faith-formation/adult/">Adult Education</a></li>
+                                <li class="active"><a href="/faith-formation/adult/">Adult Education <span class="sr-only">(current)</span></a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/faith-formation/rcia/">RCIA</a></li>
                             </ul>
