--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -126,6 +126,31 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/a5f7faacdbe22bcd35955f78befe8cef?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Father John Geis</h2>
+                                <div class="job">Sacramental Minister</div>
+                                <div class="mail"><a href="tel:8125251254">812-525-1254</a> - <a href="mailto:jfgeis@gmail.com">jfgeis@gmail.com</a></div>
+                                <div class="job"><a href="http://www.archindy.org/staff/priests/geis-john.html">About Father John</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/0eabd1cb97f9f50e272e3083cabd88a1?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Sister Dianne Kaimann</h2>
+                                <div class="job">Bookkeeper</div>
+                                <div class="mail"><a href="mailto:sisterdianne@millhousenchurch.com">sisterdianne@millhousenchurch.com</a> </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
