--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
                         <div class="item"> <img src="https://images.unsplash.com/photo-1474816734820-13ad2a6ba010?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=dckbo-9o7ga-josh-applegate.jpg&s=5f62c008603875492635fce6f149b805" alt="Church History">
                             <div class="container">
                                 <div class="carousel-caption">
-                                    <p>Join us for Mass!</p>
+                                    <p>Join us for Mass every Sunday at 8 AM!</p>
+                                    <a href="/about/directions/">
+                                        <button type="button" class="btn btn-default">Get Directions</button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -147,17 +150,19 @@
                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
                     <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
                 </div>
-                <h3>Mission Statement</h3>
-                <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
-                <ul>
-                    <li>living out Gospel values in our families and within the broader community</li>
-                    <li>coming together to worship in faith</li>
-                    <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
-                    <li>welcoming other to join us</li>
-                    <li>continuing the faith formation of ourselves and our children</li>
-                    <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
-                    <li>and reaching out to share God's gifts with others</li>
-                </ul>
+                <blockquote>
+                    <h3>Mission Statement</h3>
+                    <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
+                    <ul>
+                        <li>living out Gospel values in our families and within the broader community</li>
+                        <li>coming together to worship in faith</li>
+                        <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
+                        <li>welcoming other to join us</li>
+                        <li>continuing the faith formation of ourselves and our children</li>
+                        <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
+                        <li>and reaching out to share God's gifts with others</li>
+                    </ul>
+                </blockquote>
                 <!-- Just some generic text to fill space until I have some better ideas for the home page -->
                 <h3>Lorem 2</h3>
                 <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
