Added Privacy Policy to Homepage

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="jagged-pattern"></div>
         <div class="container">
             <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
-            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
+            <p class="text-muted pull-right"><a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> - Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
         </div>
     </footer>
     <script src="/js/format-google-calendar.js"></script>
